--- a/pagina2.html
+++ b/pagina2.html
@@ -56,7 +56,7 @@
                 <li><a href="./pagina2.html" class="footer-link">Sobre mi</a></li>
                 <li><a href="./tierlist.html" class="footer-link">Tierlist</a></li>
                 <li><a href="./trivia/trivia.html" class="footer-link">Trivia</a></li>
-                <li><a href="./lista.html" class="footer-link">Listas</a></li>
+                <li><a href="./lista.html" class="footer-link">Adaptaciones</a></li>
                 <li><a href="./playlist.html" class="footer-link">Playlist</a></li>
             </ul> <a href="#" class="footer-link footer-volver-arriba"> Volver arriba</a>
         </div>
@@ -73,6 +73,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
